<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RemindHarpActivity!</string>
    <string name="app_name">RemindHarp</string>
    <string name="createReminder">Create Reminder</string>
    <string name="viewReminders">View Reminders</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="hour">Hour</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="minute">Minute</string>
    <string name="small_text">This is like a simple description about it.</string>
    <string name="long_text">This is serious description because itis very long and clearly defines the reminder. Who else would take time to deal with this but me, huh? Lorem ipsum? No way!</string>

</resources>