<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/hour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/labelHour"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:text="@string/hour"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:width="100dp" />

        <TextView
            android:id="@+id/textHour"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:gravity="center"
            android:text="00 AM"
            android:textColor="#000"
            android:textSize="24sp"
            android:width="87dp" />

        <Button
            android:id="@+id/buttonHourMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/minus" />

        <Button
            android:id="@+id/buttonHourPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/labelMinute"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:text="@string/minute"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="24sp"
            android:width="100dp" />

        <TextView
            android:id="@+id/textMinute"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:gravity="center"
            android:text="00"
            android:textColor="#000"
            android:textSize="24sp"
            android:width="87dp" />

        <Button
            android:id="@+id/buttonMinuteMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/minus" />

        <Button
            android:id="@+id/buttonMinutePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/plus" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/actionButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom|center_horizontal" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel"
            android:width="100dp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add"
            android:width="100dp" />
    </RelativeLayout>

</LinearLayout>